<resources>

    <string name="app_name">NubankTest</string>

    <!-- Backend -->
    <string name="backend_api">https://s3-sa-east-1.amazonaws.com/mobile-challenge/bill/bill_new.json</string>

    <string name="bill_due_date_desc">Vencimento %s</string>
    <string name="bill_date_range">DE %1$s ATÉ %2$s</string>
    <string name="bill_statement_month">Gastos do mês</string>
    <string name="bill_not_paid">Valores não pagos</string>
    <string name="bill_prepaid">Valores pré-pago</string>
    <string name="bill_interest">Juros 7,75%</string>
    <string name="bill_items_values">VALORES EM R$</string>
    <string name="bill_payment_received">PAGAMENTO RECEBIDO</string>
    <string name="bill_future_desc">FATURA PARCIAL</string>
    <string name="bill_open_desc">FECHAMENTO EM %s</string>

    <string name="err_common">Desculpe, ocorreu um erro interno. Por favor, tente novamente mais tarde.</string>
    <string name="err_internet">Parece que você está sem internet! Por favor, verifique a sua conexão e tente novamente.</string>
    <string name="err_http_400">Houve algum erro com o seu pedido.</string>
    <string name="err_http_500">Desculpe, estamos enfrentando problemas técnicos. Por favor, tente novamente mais tarde.</string>

</resources>
