<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.doublelogic.nubanktest.view.billing.BillInterfaceFragment"
    android:scrollbars="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/billHeaderHighlight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bill_header_highlight_size"
            android:background="@color/bill_red"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/billHeaderValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/bill_header_value_size"
                android:textStyle="bold"
                android:text="R$ 3.670,22"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                 />

            <TextView
                android:id="@+id/billHeaderDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/bill_header_due_date_size"
                android:textStyle="normal"
                android:text="Vencimento 15 JUN"
                android:layout_below="@+id/billHeaderValue"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/billHeaderDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/bill_header_desc_size"
                android:textStyle="normal"
                android:text="FATURA PARCIAL"
                android:layout_below="@+id/billHeaderDueDate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/billPaymentReceived"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/billHeaderHighlight"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/billPaymentReceivedDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bill_green"
                android:textSize="14sp"
                android:textStyle="normal"
                android:text="@string/bill_payment_received"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/billPaymentReceivedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bill_green"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="R$ 3.670,22"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/billPaymentReceivedDesc"
                android:layout_marginTop="5dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/billStatement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/billPaymentReceived"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/billStatementMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bill_item_text"
                android:textSize="@dimen/bill_statement_text_size"
                android:textStyle="normal"
                android:text="@string/bill_statement_month"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/billStatementMonthValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bill_item_text"
                android:textSize="@dimen/bill_statement_text_size"
                android:textStyle="bold"
                android:text="R$ 3.398,44"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/billNotPaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bill_item_text"
                android:textSize="@dimen/bill_statement_text_size"
                android:textStyle="normal"
                android:text="@string/bill_not_paid"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/billStatementMonth"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/billNotPaidValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bill_item_text"
                android:textSize="@dimen/bill_statement_text_size"
                android:textStyle="bold"
                android:text="R$ 271,78"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/billStatementMonthValue"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/billInterest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bill_item_text"
                android:textSize="@dimen/bill_statement_text_size"
                android:textStyle="normal"
                android:text="@string/bill_interest"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/billNotPaid"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/billInterestValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/bill_item_text"
                android:textSize="@dimen/bill_statement_text_size"
                android:textStyle="bold"
                android:text="R$ 14,23"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/billNotPaidValue"
                android:layout_marginTop="5dp"/>


        </RelativeLayout>

        <Button
            android:id="@+id/billButtonPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_default_red_selector"
            android:text="GERAR BOLETO"
            android:textStyle="normal"
            android:textSize="16sp"
            android:layout_below="@+id/billStatement"
            android:textColor="@color/btn_default_red_text_selector"
            android:layout_margin="20dp"
            />

        <RelativeLayout
            android:id="@+id/billItemsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/billButtonPay"
            android:background="@color/bill_item_background">

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/bill_item_text"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/billItemDateRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 ABR ATÉ 5 MAI"
                android:textColor="@color/bill_item_text"
                android:textSize="@dimen/bill_item_text_size"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/line"
                />

            <TextView
                android:id="@+id/billItemValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_items_values"
                android:textColor="@color/bill_item_text"
                android:textSize="@dimen/bill_item_text_size"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/line"
                />


        </RelativeLayout>

        <ListView
            android:id="@+id/listBillItems"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@android:color/transparent"
            android:layout_below="@+id/billItemsHeader"/>

    </RelativeLayout>

</ScrollView>
